languages/io-automaton-fe/src/test/resources/invalid/OutputsAtWrongPlace.ioautomaton
package invalid;

automaton OutputsAtWrongPlace{

    input int i;
    output int o;
    variable int v;
    
    state S;
    initial S;
    
    //There should be no output in the guard
    //There should be no output in the stimulus
    //There should be only outputs lefthand in the action
    S [v==0 && i == 0 && v == 0] {v = v|i|o, i = v|i|o} / {v = v|i|o, o = v|i|o};
    
}